# pdfVision

./: .gitignore  COMMIT_MESSAGE.txt  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
scripts/: benchmark_ollama.py
src/: annotate_pdf.py  image_link.py  pdf_extract.py  question_segment.py
src/solver/: api_solver.py  base.py  gemini_solver.py  local_solver.py
